--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.3",
     "forever": "^0.15.3",
     "lint-staged": "^7.1.2",
+    "lodash": "^4.17.10",
     "meow": "^5.0.0",
     "mongodb": "~3.0.8",
     "pre-commit": "^1.2.2"
