--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "forever --minUptime 2000 --spinSleepTime 2000 -c 'nodemon --exitcrash' server.js",
+    "start": "nodemon server.js",
     "lint": "./node_modules/.bin/eslint ./*.js ./**/*.js",
     "fix": "./node_modules/.bin/eslint --fix ./*.js ./**/*.js",
     "lint-staged": "lint-staged",
@@ -24,16 +24,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "eslint": "^5.3.0",
+    "nodemon": "^1.17.5",
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "eslint": "^4.19.1",
     "express": "^4.16.3",
-    "forever": "^0.15.3",
     "lint-staged": "^7.1.2",
     "lodash": "^4.17.10",
     "meow": "^5.0.0",
-    "mongodb": "~3.0.8",
-    "pre-commit": "^1.2.2"
+    "mongodb": "~3.1.1"
   }
 }
