--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "NODE_ENV=test mocha --exit",
     "start": "nodemon server.js",
     "lint": "./node_modules/.bin/eslint ./*.js ./**/*.js",
     "fix": "./node_modules/.bin/eslint --fix ./*.js ./**/*.js",
@@ -25,6 +26,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^5.3.0",
+    "mocha": "^5.2.0",
+    "mocha-eslint": "^4.1.0",
     "nodemon": "^1.17.5",
     "pre-commit": "^1.2.2"
   },
