--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.0.0",
     "eslint": "^5.3.0",
     "mocha": "^5.2.0",
     "mocha-eslint": "^4.1.0",
