--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-mung": "^0.5.1",
+    "jskos-tools": "^0.1.6",
     "lint-staged": "^7.1.2",
     "lodash": "^4.17.10",
     "meow": "^5.0.0",
