--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
+    "JSONStream": "^1.3.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-mung": "^0.5.1",
