--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "JSONStream": "^1.3.4",
     "csv-stringify": "^4.0.1",
     "dotenv": "^6.0.0",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.16.3",
     "express-mung": "^0.5.1",
     "jskos-tools": "^0.1.9",
