--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "lodash": "^4.17.11",
     "meow": "^5.0.0",
     "mongodb": "~3.1.1",
+    "passport": "^0.4.0",
+    "passport-anonymous": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "portfinder": "^1.0.16"
   }
 }
