--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.0.0",
     "eslint": "^5.3.0",
+    "jsonwebtoken": "^8.5.0",
     "mocha": "^5.2.0",
     "mocha-eslint": "^4.1.0",
     "nodemon": "^1.17.5",
