--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "./node_modules/.bin/eslint ./*.js ./**/*.js",
     "fix": "./node_modules/.bin/eslint --fix ./*.js ./**/*.js",
     "lint-staged": "lint-staged",
-    "import": "node import.js"
+    "import": "node --max-old-space-size=8192 import.js"
   },
   "lint-staged": {
     "**/*.js": [
@@ -40,7 +40,7 @@
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "JSONStream": "^1.3.4",
+    "JSONStream": "^1.3.5",
     "body-parser": "^1.18.3",
     "csv-stringify": "^4.0.1",
     "dotenv": "^6.0.0",
@@ -53,6 +53,7 @@
     "lodash": "^4.17.11",
     "meow": "^5.0.0",
     "mongodb": "~3.1.1",
+    "ndjson": "^1.5.0",
     "passport": "^0.4.0",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
