--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ node_modules/
 config*.json
 !config.default.json
 !config.test.json
+!config/config.default.json
+!config/config.test.json
 
 npm-debug.log*
 yarn-debug.log*
