Add support for mapping cardinality

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -38,7 +38,8 @@
     },
     "fromSchemeWhitelist": null,
     "toSchemeWhitelist": null,
-    "anonymous": false
+    "anonymous": false,
+    "cardinality": "1-to-n"
   },
   "annotations": {
     "read": {
