Allow to configure concordances via config

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -41,6 +41,7 @@
     "anonymous": false,
     "cardinality": "1-to-n"
   },
+  "concordances": true,
   "annotations": {
     "read": {
       "auth": false
