--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mongodb": "~3.1.1",
     "mongoose": "^5.6.7",
     "ndjson": "^1.5.0",
+    "nocache": "^2.1.0",
     "passport": "^0.4.0",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
