Add moderatingIdentities for annotations
Note that this is a temporary implementation and can be replaced without notice! In particular, it will be replaced as soon as user roles etc. (i.e. #47) are implemented.

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -56,7 +56,8 @@
     "delete": {
       "auth": true,
       "crossUser": false
-    }
+    },
+    "moderatingIdentities": []
   },
   "identityProviders": null,
   "identities": null
