Update and adjust dependencies

--- a/package.json
+++ b/package.json
@@ -31,41 +31,41 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "ajv": "^6.12.2",
+    "ajv": "^6.12.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.5.0",
     "eslint-config-gbv": "github:gbv/eslint-config-gbv#ecaf810",
     "jsonwebtoken": "^8.5.1",
-    "lint-staged": "^10.2.2",
-    "mocha": "^7.1.2",
+    "lint-staged": "^10.2.11",
+    "mocha": "^7.2.0",
     "mocha-eslint": "^6.0.0",
-    "nodemon": "^2.0.3",
+    "portfinder": "^1.0.27",
     "pre-commit": "^1.2.2",
-    "proxyquire": "^2.1.3",
-    "request": "^2.88.2"
+    "proxyquire": "^2.1.3"
   },
   "dependencies": {
     "JSONStream": "^1.3.5",
-    "ejs": "^3.1.2",
+    "ejs": "^3.1.3",
     "escape-string-regexp": "^4.0.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "ipaddr.js": "^1.9.1",
-    "jskos-tools": "^1.0.7",
+    "jskos-tools": "^1.0.9",
     "jskos-validate": "^0.3.2",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "meow": "^7.0.1",
-    "mongodb": "~3.5.7",
-    "mongoose": "^5.9.13",
+    "mongodb": "~3.5.9",
+    "mongoose": "^5.9.25",
     "ndjson": "^1.5.0",
     "nocache": "^2.1.0",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
-    "portfinder": "^1.0.26",
+    "request": "^2.88.2",
     "typedi": "^0.8.0",
-    "uuid": "^8.0.0"
+    "uuid": "^8.2.0"
   }
 }
