--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "JSONStream": "^1.3.5",
+    "busboy": "^0.3.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "escape-string-regexp": "^4.0.0",
@@ -66,6 +67,7 @@
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "request": "^2.88.2",
+    "stream-json": "^1.7.1",
     "typedi": "^0.8.0",
     "uuid": "^8.3.0"
   }
