--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   },
   "dependencies": {
     "JSONStream": "^1.3.5",
-    "busboy": "^0.3.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "escape-string-regexp": "^4.0.0",
@@ -56,6 +55,7 @@
     "ipaddr.js": "^2.0.0",
     "jskos-tools": "^1.0.14",
     "jskos-validate": "^0.3.2",
+    "json-anystream": "github:gbv/json-anystream",
     "lodash": "^4.17.20",
     "meow": "^7.1.1",
     "mongodb": "~3.5.11",
@@ -67,7 +67,6 @@
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "request": "^2.88.2",
-    "stream-json": "^1.7.1",
     "typedi": "^0.8.0",
     "uuid": "^8.3.0"
   }
