--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "proxyquire": "^2.1.3"
   },
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "escape-string-regexp": "^4.0.0",
@@ -55,7 +56,6 @@
     "jskos-tools": "^1.0.14",
     "jskos-validate": "^0.3.2",
     "json-anystream": "github:gbv/json-anystream",
-    "jsonstream": "^1.0.3",
     "lodash": "^4.17.20",
     "meow": "^7.1.1",
     "mongodb": "~3.5.11",
