--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "import": "./bin/import.js",
     "import-batch": "func() { tr '\\n' '\\0' < \"$2\"  | xargs -0 -n1 ./bin/import.js $1; }; func",
     "reset": "./bin/reset.js",
-    "upgrade": "./bin/upgrade.js"
+    "upgrade": "./bin/upgrade.js",
+    "release": "git checkout dev && git pull && npm test && npm version $SEMVER && git push && git checkout master && git merge dev && git push --follow-tags && git checkout dev",
+    "release:patch": "SEMVER=patch npm run release",
+    "release:minor": "SEMVER=minor npm run release",
+    "release:major": "SEMVER=major npm run release"
   },
   "lint-staged": {
     "**/*.js": [
