--- a/package.json
+++ b/package.json
@@ -35,21 +35,20 @@
   "license": "MIT",
   "devDependencies": {
     "ajv": "^6.12.6",
-    "chai": "^4.3.0",
+    "chai": "^4.3.3",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.21.0",
     "eslint-config-gbv": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.4",
-    "mocha": "^8.3.0",
+    "mocha": "^8.3.1",
     "mocha-eslint": "^6.0.0",
     "portfinder": "^1.0.28",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3"
   },
   "dependencies": {
-    "JSONStream": "^1.3.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "escape-string-regexp": "^4.0.0",
@@ -59,16 +58,17 @@
     "jskos-tools": "^1.0.16",
     "jskos-validate": "^0.4.0",
     "json-anystream": "^1.1.0",
-    "lodash": "^4.17.20",
+    "JSONStream": "^1.3.5",
+    "lodash": "^4.17.21",
     "meow": "^8.1.2",
     "mongodb": "^3.6.4",
-    "mongoose": "^5.11.17",
+    "mongoose": "^5.11.19",
     "nocache": "^2.1.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
-    "typedi": "^0.8.0",
+    "typedi": "~0.8.0",
     "uuid": "^8.3.2",
     "yesno": "^0.3.1"
   }
