--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
     "lodash": "^4.17.21",
     "meow": "^8.1.2",
     "mongodb": "^4.1.2",
-    "mongoose": "^5.13.9",
-    "nocache": "^2.1.0",
-    "nodemon": "^2.0.12",
-    "passport": "^0.4.1",
+    "mongoose": "^6.0.8",
+    "nocache": "^3.0.1",
+    "nodemon": "^2.0.13",
+    "passport": "~0.4.1",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "typedi": "~0.8.0",
