--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "proxyquire": "^2.1.3"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.6",
     "escape-string-regexp": "^4.0.0",
