Add config option to disable closed world assumption (#158)

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -3,6 +3,7 @@
   "baseUrl": null,
   "title": "JSKOS Server",
   "version": null,
+  "closedWorldAssumption": true,
   "port": 3000,
   "proxies": [],
   "mongo": {
