--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "meow": "^9.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1",
+    "morgan": "^1.10.0",
     "nocache": "^3.0.3",
     "nodemon": "^2.0.15",
     "passport": "~0.5.2",
