--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "ajv": "^6.12.6",
     "axios": "^0.27.2",
+    "cocoda-sdk": "^3.2.2",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
