--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
-    "eslint": "^8.21.0",
+    "eslint": "^8.23.1",
     "eslint-config-gbv": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^12.5.0",
     "mocha": "^9.2.2",
     "mocha-eslint": "^7.0.0",
-    "portfinder": "^1.0.28",
+    "portfinder": "^1.0.32",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3"
   },
@@ -54,26 +54,26 @@
     "ajv": "^6.12.6",
     "axios": "^0.27.2",
     "cocoda-sdk": "^3.2.2",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
     "ipaddr.js": "^2.0.1",
     "jskos-tools": "^1.0.26",
-    "jskos-validate": "^0.5.3",
+    "jskos-validate": "0.5.3",
     "json-anystream": "^1.1.1",
     "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "meow": "^9.0.0",
-    "mongodb": "^4.8.1",
-    "mongoose": "^6.5.0",
+    "mongodb": "^4.9.1",
+    "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "nocache": "^3.0.4",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "passport": "~0.6.0",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "yesno": "^0.4.0"
   }
 }
