--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "express-basic-auth": "^1.2.1",
     "ipaddr.js": "^2.0.1",
     "jskos-tools": "^1.0.26",
-    "jskos-validate": "0.5.3",
+    "jskos-validate": "~0.5.6",
     "json-anystream": "^1.1.1",
     "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
