Update main code base to ESM (#159)
- Scripts not updated yet.
- Tests not updated yet.
- ESLint not updated yet.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "type": "git",
     "url": "https://github.com/gbv/jskos-server.git"
   },
-  "main": "server.js",
+  "type": "module",
+  "exports": "./server.js",
   "engines": {
     "node": ">=14"
   },
