--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --exit --timeout 20000 --slow 2000",
+    "test": "NODE_ENV=test mocha --loader=esmock --exit --timeout 20000 --slow 2000",
     "start": "nodemon server.js",
     "lint": "./node_modules/.bin/eslint './**/*.js'",
     "fix": "./node_modules/.bin/eslint --fix './**/*.js'",
@@ -44,13 +44,13 @@
     "chai-http": "^4.3.0",
     "eslint": "^8.36.0",
     "eslint-config-gbv": "^1.0.4",
+    "esmock": "^2.2.1",
     "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.2.0",
     "mocha": "^9.2.2",
     "mocha-eslint": "^7.0.0",
     "portfinder": "^1.0.32",
-    "pre-commit": "^1.2.2",
-    "proxyquire": "^2.1.3"
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {
     "ajv": "^6.12.6",
