--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   github-release:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Create GitHub release
         id: create_release
