--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "ajv": "^6.12.6",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "axios": "^1.3.5",
     "cocoda-sdk": "^3.4.3",
     "dotenv": "^16.0.3",
