--- a/config/config.default.json
+++ b/config/config.default.json
@@ -9,7 +9,7 @@
   "mongo": {
     "user": "",
     "pass": "",
-    "host": "localhost",
+    "host": "127.0.0.1",
     "port": 27017,
     "db": "jskos-server",
     "options": {
