Add `mismatchTagVocabulary` to default config (#194)

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -59,7 +59,8 @@
       "auth": true,
       "crossUser": false
     },
-    "moderatingIdentities": []
+    "moderatingIdentities": [],
+    "mismatchTagVocabulary": null
   },
   "anonymous": false,
   "identityProviders": null,
