Add Docker entrypoint to create config file if necessary
Docker needs database host "mongo" by default.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,4 +17,6 @@ COPY docker/.env .env
 # Use pm2 to run app
 RUN npm i -g pm2
 
-CMD ["pm2-runtime", "server.js"]
+COPY docker/docker-entrypoint.sh /usr/local/bin/
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["%%CMD%%"]
