--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.3.8",
+    "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.4.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.50.0",
     "eslint-config-gbv": "^1.0.5",
-    "esmock": "^2.3.8",
+    "esmock": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^14.0.1",
     "mocha": "^10.2.0",
@@ -54,7 +54,7 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "cocoda-sdk": "^3.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -67,8 +67,8 @@
     "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "meow": "^12.1.1",
-    "mongodb": "^6.0.0",
-    "mongoose": "^7.5.0",
+    "mongodb": "^6.1.0",
+    "mongoose": "7.5.1",
     "morgan": "^1.10.0",
     "nocache": "^4.0.0",
     "nodemon": "^3.0.1",
@@ -76,7 +76,7 @@
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.1",
     "portfinder": "^1.0.32",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "yesno": "^0.4.0"
   }
 }
