--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "chai-http": "^4.4.0",
     "eslint": "^8.51.0",
     "eslint-config-gbv": "^1.1.0",
-    "esmock": "^2.5.2",
+    "esmock": "^2.5.6",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^14.0.1",
     "mocha": "^10.2.0",
@@ -68,7 +68,7 @@
     "lodash": "^4.17.21",
     "meow": "^12.1.1",
     "mongodb": "^6.1.0",
-    "mongoose": "7.6.0",
+    "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "nocache": "^4.0.0",
     "nodemon": "^3.0.1",
