--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jskos-server",
   "version": "2.1.0",
+  "apiVersion": "2.1",
   "description": "",
   "repository": {
     "type": "git",
