Adjust Dockerfile to prevent issue with docker compose run

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,6 +17,4 @@ COPY docker/.env .env
 # Use pm2 to run app
 RUN npm i -g pm2
 
-COPY docker/docker-entrypoint.sh /usr/local/bin/
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
-CMD ["%%CMD%%"]
+CMD ["/usr/src/app/docker/docker-entrypoint.sh"]
