Update linting to ESLint v9 and new rules

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "test": "NODE_ENV=test mocha --loader=esmock --exit --timeout 20000 --slow 2000",
     "start": "nodemon server.js",
-    "lint": "./node_modules/.bin/eslint './**/*.js'",
-    "fix": "./node_modules/.bin/eslint --fix './**/*.js'",
+    "lint": "eslint",
+    "fix": "eslint --fix",
     "lint-staged": "lint-staged",
     "import": "./bin/import.js",
     "import-batch": "func() { tr '\\n' '\\0' < \"$2\"  | xargs -0 -n1 ./bin/import.js $1; }; func",
@@ -43,8 +43,8 @@
     "chai": "^4.4.1",
     "chai-as-promised": "^7.1.2",
     "chai-http": "^4.4.0",
-    "eslint": "^8.57.0",
-    "eslint-config-gbv": "^1.1.0",
+    "eslint": "^9.10.0",
+    "eslint-config-gbv": "^2.0.0",
     "esmock": "^2.6.6",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.2.7",
