--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
   "devDependencies": {
     "chai": "^5.1.1",
     "chai-as-promised": "^8.0.0",
-    "chai-http": "^5.0.0",
-    "eslint": "~9.10.0",
-    "eslint-config-gbv": "~2.0.0",
+    "chai-http": "^5.1.1",
+    "eslint": "~9.11",
+    "eslint-config-gbv": "~2.1",
     "esmock": "^2.6.7",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.2.10",
@@ -55,23 +55,23 @@
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "axios": "^1.7.7",
-    "cocoda-sdk": "^3.4.11",
+    "cocoda-sdk": "^3.4.12",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-basic-auth": "^1.2.1",
     "ipaddr.js": "^2.2.0",
-    "jskos-tools": "^1.0.40",
-    "jskos-validate": "~0.6.0",
-    "json-anystream": "^1.1.1",
+    "jskos-tools": "^1.0.42",
+    "jskos-validate": "^1.0.0",
+    "json-anystream": "^2.0.1",
     "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "meow": "^13.2.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.6.2",
+    "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "nocache": "^4.0.0",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.7",
     "passport": "~0.7.0",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.1",
