--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.2.10",
     "mocha": "^10.7.3",
-    "pre-commit": "^1.2.2",
-    "yesno": "^0.4.0"
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {
     "ajv": "^8.17.1",
@@ -78,6 +77,7 @@
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.1",
     "portfinder": "^1.0.32",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "yesno": "^0.4.0"
   }
 }
