--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -11,12 +11,9 @@ jobs:
     steps:
       - name: Create GitHub release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref }}
-          release_name: JSKOS Server ${{ github.ref }}
+          name: JSKOS Server ${{ github.ref_name }}
           body: TODO
           draft: true
           prerelease: false
