Remove esmock loader on mocha

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --loader=esmock --exit --timeout 20000 --slow 2000",
+    "test": "NODE_ENV=test mocha --exit --timeout 20000 --slow 2000",
     "start": "nodemon server.js",
     "lint": "eslint",
     "fix": "eslint --fix",
