--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.2.11",
-    "mocha": "^11.0.1"
+    "mocha": "^11.0.1",
+    "ws": "^8.18.2",
+    "express-ws": "^5.0.2"
   },
   "dependencies": {
     "ajv": "^8.17.1",
@@ -62,6 +64,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-basic-auth": "^1.2.1",
+    "express-ws": "^5.0.2",
     "ipaddr.js": "^2.2.0",
     "jskos-tools": "^1.0.43",
     "jskos-validate": "^1.1.3",
