--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,19 +17,16 @@ jobs:
     - uses: actions/checkout@v4
 
     # 1) Start a Mongo container in replica‐set mode
-    - name: Start MongoDB replica set
-      run: |
-          docker run -d --name mongodb -p 27017:27017 mongo:${{ matrix.mongo-version }} \
-            --replSet rs0 --bind_ip_all
-
+    - name: Start MongoDB
+      run: docker run --rm -d -p 27017:27017 --name mongo  mongo:${{ matrix.mongo-version }} --replSet test --bind_ip_all
+     
     # 2) Initiate the replica set
     - name: Initiate replica set
       run: |
-          until docker exec mongodb mongo --eval 'rs.initiate()'; do
-            echo "Waiting for Mongo…"
-            sleep 1
-          done
-          
+          sleep 5 # Give mongo a chance to start up
+          docker run --rm mongo:${{ matrix.mongo-version }} mongosh --host 172.17.0.1 --eval 'rs.initiate({_id: "test", members: [{_id: 0, host: "172.17.0.1:27017"}]})'
+
+
     # 3) Install Node and dependencies
     - uses: actions/setup-node@v4
       with:
