--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,12 @@ jobs:
         node-version: [ 20.x, 22.x ]
         mongo-version: [4, 5, 6]
 
+    services:
+      mongodb:
+        image: mongo:${{ matrix.mongo-version }}
+        ports:
+          - 27017:27017
+
     steps:
     - uses: actions/checkout@v4
 
