--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,36 +11,28 @@ jobs:
     strategy:
       matrix:
         node-version: [ 20.x, 22.x ]
-        mongo-version: [4, 5, 6]
-
-    services:
-      mongodb:
-        image: mongo:${{ matrix.mongo-version }}
-        ports:
-          - 27017:27017
+        mongodb-version: [4, 5, 6]
 
     steps:
-    - uses: actions/checkout@v4
-
-    # 1) Start a Mongo container in replica‐set mode
-    - name: Start MongoDB
-      run: docker run --rm -d -p 27017:27017 --name mongo  mongo:${{ matrix.mongo-version }} --replSet test --bind_ip_all
-     
-    # 2) Initiate the replica set
-    - name: Initiate replica set
-      run: |
-          sleep 5 # Give mongo a chance to start up
-          docker run --rm mongo:${{ matrix.mongo-version }} mongosh --host 172.17.0.1 --eval 'rs.initiate({_id: "test", members: [{_id: 0, host: "172.17.0.1:27017"}]})'
-
-
-    # 3) Install Node and dependencies
-    - uses: actions/setup-node@v4
+    - name: Git checkout
+      uses: actions/checkout@v4
+      
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
 
-    # 4) Actual running tests
-    - run: npm test
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.12.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
+        mongodb-replica-set: test-rs
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run tests
+      run: npm test
 
 
 
