--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --exit --timeout 20000 --slow 2000",
+    "test": "NODE_ENV=test mocha --exit --timeout 60000 --slow 2000",
     "start": "nodemon server.js",
     "lint": "eslint",
     "fix": "eslint --fix",
@@ -47,13 +47,14 @@
     "eslint": "~9.20",
     "eslint-config-gbv": "~2.6",
     "esmock": "^2.6.9",
+    "express-ws": "^5.0.2",
     "glob": "^11.0.1",
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.2.11",
     "mocha": "^11.0.1",
-    "ws": "^8.18.2",
-    "express-ws": "^5.0.2"
+    "mongodb-memory-server": "^10.1.4",
+    "ws": "^8.18.2"
   },
   "dependencies": {
     "ajv": "^8.17.1",
